feat: added swag for assign tasks
